# whofi

./: CI-CD-FIXES-SUMMARY.md  README.md  create-issue.json  epic-issue.md  issue-comment-1.md  issue-comment-2.md  test-integration.sh
.claude-flow/metrics/: performance.json  task-metrics.json
.github/workflows/: build-and-release.yaml  ci-cd.yaml
csi-firmware/: CMakeLists.txt  Dockerfile.esp-idf  README-Docker.md  check_firmware_size.sh  docker-build.sh  docker-compose.esp-idf.yml  ota-deployment-guide.md  partitions.csv  sdkconfig.1mb  sdkconfig.4mb_minimal  sdkconfig.defaults  sdkconfig.http_only  sdkconfig.http_websocket  sdkconfig.ota  test-runner.sh  test_4mb_runner.sh
csi-firmware/docs/: DOCKER_TESTING_GUIDE.md  FIRMWARE_FEATURES.md
csi-firmware/main/: CMakeLists.txt  app_config.c  app_config.h  main.c  remote_config.c  system_init.c
csi-firmware/test/: run_tests.sh  sdkconfig.defaults  test_framework.py
csi-firmware/test-config/: mosquitto.conf
csi-firmware/test-tdd/: CMakeLists.txt  test_4mb_optimized.c  test_csi_functionality.c  test_csi_memory.c  test_mqtt_integration.c
csi-server/: Dockerfile.unified  docker-compose-v2.yml  nginx.conf  start-unified.sh
csi-server/backend/: Dockerfile  jest.config.js  package.json  (+4 more)
docs/: 4MB-OTA-Optimization-Guide.md  FIRMWARE_SELECTION_GUIDE.md  HTTP_ONLY_OPTIMIZATION.md  WEBSOCKET_STREAMING_GUIDE.md
firmware-releases/: README.md
tests/: demo-telemetry.js  docker-unified-integration.test.js  esp32-simulator.js  esp32-telemetry-simulation.test.js  package.json  real-integration-test.js  standalone-demo.js
(+36 files in other folders)
